--- a/Bloodgeon/Packages/manifest.json
+++ b/Bloodgeon/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.collab-proxy": "1.15.7",
     "com.unity.feature.2d": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.12",
+    "com.unity.inputsystem": "1.1.1",
     "com.unity.test-framework": "1.1.30",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.3",
